Fixed footer so on smaller pages it is always at bottom of page while also never overlapping content

--- a/src/App.css
+++ b/src/App.css
@@ -96,27 +96,6 @@ body{
   opacity: 0.8;
 }
 
-.page-container{
-  padding-bottom: 350px;
-}
-
-
-.footerSmall{
-  position: fixed;
-  bottom:0px;
-  width:100%;
-  height: 325px;
-}
-
-@media only screen and (max-width: 770px){
-  .footerSmall{
-    height: 450px;
-  }
-  .page-container{
-    padding-bottom: 450px;
-  }
-}
-
 .tableImageWithLink{
   max-width: 50%;
   cursor: pointer;
@@ -162,4 +141,12 @@ body{
 ul{
   list-style-type: circle;
   padding-left: 20px;
+}
+
+.content {
+  min-height: calc(100vh - 325px);
+}
+
+.footer {
+  height: 325px;
 }
